stage phase complete (without AI), hover added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <section>
     </section>
     <aside>
-      <button class='rotateButton'>Rotate</button>
+      <button class='rotateButton' id='rotate1'>Rotate</button>
+      <button class='attackPhase'>ATTACK PHASE!</button>
+      <button class='rotateButton' id='rotate2'>Rotate</button>
+      <!-- <button class='nextTurnButton'>Submit</button> -->
     </aside>
   </main>
 
