added sea & miss tiles, computer randomly selects placement and attacks

--- a/index.html
+++ b/index.html
@@ -8,11 +8,24 @@
 </head>
 <body>
   <main>
+    <aside class='leftAside'>
+      <div class='lives'>
+        <div class='playerOneLives'>Player one lives:
+          <div class='playerOneLivesNum'></div>
+        </div>
+        <div class='playerTwoLives'>Player one lives:
+          <div class='playerTwoLivesNum'></div>
+        </div>
+      </div>
+    </aside>
     <section>
+      <div class='grid' id='grid1'></div>
+      <div class='grid' id='grid2'></div>
     </section>
     <aside>
       <button class='rotateButton' id='rotate1'>Rotate</button>
       <button class='attackPhase'>ATTACK PHASE!</button>
+      <button class='resetButton'>Reset</button>
       <button class='rotateButton' id='rotate2'>Rotate</button>
       <!-- <button class='nextTurnButton'>Submit</button> -->
     </aside>
