basic AI targetting function added

--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
     </aside>
     <section>
       <div class='grid' id='grid1'></div>
+      <aside>
+        <button class='rotateButton' id='rotate1'>Rotate</button>
+        <button class='attackPhase'>ATTACK PHASE!</button>
+        <button class='resetButton'>Reset</button>
+        <button class='rotateButton' id='rotate2'>Rotate</button>
+        <button class='testOne'>FILL BOARD ONE</button>
+        <!-- <button class='nextTurnButton'>Submit</button> -->
+      </aside>
       <div class='grid' id='grid2'></div>
     </section>
-    <aside>
-      <button class='rotateButton' id='rotate1'>Rotate</button>
-      <button class='attackPhase'>ATTACK PHASE!</button>
-      <button class='resetButton'>Reset</button>
-      <button class='rotateButton' id='rotate2'>Rotate</button>
-      <!-- <button class='nextTurnButton'>Submit</button> -->
-    </aside>
+
   </main>
 
   <script src="battleships.js"></script>
