computer fully working now - haven't debugged though

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class='playerOneLives'>Player one lives:
           <div class='playerOneLivesNum'></div>
         </div>
-        <div class='playerTwoLives'>Player one lives:
+        <div class='playerTwoLives'>Computer lives:
           <div class='playerTwoLivesNum'></div>
         </div>
       </div>
