various visuals added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class='outline submarineOut1'></div>
             <div class='itemShip' id='patrolBoat1'>PATROL BOAT</div>
             <div class='outline patrolBoatOut1'></div>
-            <div class='playerOneLivesNum'></div>
+            <div class='livesNum playerOneLivesNum'></div>
           </div>
         </div>
       </aside>
@@ -49,7 +49,7 @@
             <div class='outline submarineOut2'></div>
             <div class='itemShip' id='patrolBoat2'>PATROL BOAT</div>
             <div class='outline patrolBoatOut2'></div>
-            <div class='playerTwoLivesNum'></div>
+            <div class='livesNum playerTwoLivesNum'></div>
           </div>
         </div>
       </aside>
