radar CSS sorted

--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
       </aside>
     </section>
 
+    <section class='middleSection'>
+      <div class='boardNames'>
+        <div class='playerBoardName'>^ FRIENDLY SHIPS ^</div>
+      </div>
+      <div class='boardNames'>
+        <div class='COMPUTERBoardName'>^ ENEMY RADAR ^</div>
+      </div>
+    </section>
+
     <section class='lowerSection'>
       <div class='buttonContainer'>
         <button class='rotateButton' id='rotate1'>Rotate</button>
