improved AI & debugged

--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
         </div>
       </aside>
       <div class='grid' id='grid1'></div>
-      <div class='grid' id='grid2'></div>
+      <div class='grid' id='grid2'>
+        
+        <div class='gridBackground' id='grid2Background'></div>
+        <div class='gridBackground2' id='grid2Background2'></div>
+        </div>
+      </div>
       <aside class='rightAside'>
         <div class='light computerTurnLight'></div>
         <div class='lives'>
@@ -62,6 +67,10 @@
       <div class='boardNames'>
         <div class='COMPUTERBoardName'>^ ENEMY RADAR ^</div>
       </div>
+    </section>
+
+    <section classs='infoBar2'>
+      <div class='infoText infoText2'>... ...</div>
     </section>
 
     <section class='lowerSection'>
