Final push - SFX added, no mobile optimisation

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
       </div>
     </section>
 
+    <audio class='audio1' src=''></audio>
   </main>
 
   <script src="battleships.js"></script>
