added starting menu and various buttons - soviet theme

--- a/index.html
+++ b/index.html
@@ -8,9 +8,25 @@
 </head>
 <body>
   <main>
-    <section classs='infoBar'>
-      <div class='infoText'>... ...</div>
+    <section class='menuScreen'>
+      <img src='./images/logo.png' class='logo'></img>
+      <button class='menuButton menuReturn hidden'>MENU</button>
+      <button class='menuButton startGame'>START</button>
+      <button class='menuButton settings'>SETTINGS</button>
+      <button class='menuButton save'>SAVE</button>
+      <button class='menuButton load'>LOAD</button>
     </section>
+
+    <section class='topSection'>
+      <img src='./images/logo.png' class='stars'></img>
+
+      <section class='infoBar'>
+        <div class='infoText'>... ...</div>
+      </section>
+
+      <img src='./images/logo.png' class='stars'></img>
+    </section>
+
 
     <section class='middleSection'>
       <div class='boardNames'>
@@ -110,6 +126,7 @@
     </section>
 
     <audio class='audio1' src=''></audio>
+    <audio class='audio2' src=''></audio>
   </main>
 
   <script src="battleships.js"></script>
