added 1st music track

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <main>
     <section class='menuScreen'>
       <img src='./images/logo.png' class='logo'></img>
-      <button class='menuButton menuReturn hidden'>MENU</button>
+      <button class='menuButton2 menuReturn hidden'>MENU</button>
       <button class='menuButton startGame'>START</button>
-      <button class='menuButton settings'>SETTINGS</button>
+      <button class='menuButton settings'>TOGGLE MUSIC</button>
       <button class='menuButton save'>SAVE</button>
       <button class='menuButton load'>LOAD</button>
     </section>
@@ -126,7 +126,7 @@
     </section>
 
     <audio class='audio1' src=''></audio>
-    <audio class='audio2' src=''></audio>
+    <audio class='audio2' src='./sounds/redFleetTheme25012021.wav' loop='true'></audio>
   </main>
 
   <script src="battleships.js"></script>
